Fix too big headers introduced in b17aea0

--- a/about_panels.css
+++ b/about_panels.css
@@ -40,3 +40,7 @@ p.designation {
 h3.designation {
     margin-bottom: 0;
 }
+
+h3 {
+    font-size: 190%;
+}
