--- a/style.css
+++ b/style.css
@@ -88,10 +88,6 @@ header {
     font-size: 175%;
 }
 
-h3 {
-    font-size: 190%;
-}
-
 .topnav a:hover {
     color: #00d9ff;
 }
